# wordle_solver

./: .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
src/wordle_solver/: __init__.py  solver.py
tests/: test_wordle.py
